@@ -1,3 +1,7 @@
+2009-12-15 Riccardo Mottola <rmottola@users.sf.net>
+
+	* Source/NSOutlineView.m: removed c99-isms
+
 2009-12-11 Eric Wasylishen <ewasylishen@gmail.com>
 
 	* Source/GSThemeTools.m: Correct the destination rect coordinates in
